add the ability to package the project with the jars and what not

--- a/water-platformer-game/pom.xml
+++ b/water-platformer-game/pom.xml
@@ -1,16 +1,59 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>app.cleancode</groupId>
-    <artifactId>water-platformer</artifactId>
-    <version>0.0.1</version>
-  </parent>
-  <artifactId>water-platformer-game</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>app.cleancode</groupId>
-  		<artifactId>water-platformer-engine</artifactId>
-  		<version>${project.version}</version>
-  	</dependency>
-  </dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>app.cleancode</groupId>
+		<artifactId>water-platformer</artifactId>
+		<version>0.0.1</version>
+	</parent>
+	<artifactId>water-platformer-game</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>app.cleancode</groupId>
+			<artifactId>water-platformer-engine</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+	<build>
+	<finalName>water-platformer</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<outputDirectory>${project.build.directory}/release-directory</outputDirectory>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>app.cleancode.Entrypoint</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.3.0</version>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeScope>runtime</includeScope>
+							<outputDirectory>${project.build.directory}/release-directory/lib</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
