--- a/water-platformer-engine/pom.xml
+++ b/water-platformer-engine/pom.xml
@@ -10,22 +10,36 @@
   	<dependency>
   		<groupId>org.openjfx</groupId>
   		<artifactId>javafx-graphics</artifactId>
-  		<version>17</version>
+  		<version>19</version>
   	</dependency>
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-databind</artifactId>
-  		<version>2.13.4.1</version>
+  		<version>2.13.4.2</version>
   	</dependency>
   	<dependency>
   		<groupId>org.openjfx</groupId>
   		<artifactId>javafx-media</artifactId>
-  		<version>17</version>
+  		<version>19</version>
   	</dependency>
   	<dependency>
   		<groupId>org.openjfx</groupId>
   		<artifactId>javafx-swing</artifactId>
-  		<version>17</version>
+  		<version>19</version>
   	</dependency>
   </dependencies>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.10.0</version>
+  		</plugin>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-jar-plugin</artifactId>
+  			<version>3.3.0</version>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
