fix everything so it all works nicely with jpackage

--- a/water-platformer-game/pom.xml
+++ b/water-platformer-game/pom.xml
@@ -14,7 +14,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-	<finalName>water-platformer</finalName>
+		<finalName>water-platformer</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -53,6 +53,28 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.3.0</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+						<outputDirectory>${project.build.directory}/release-directory/assets</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.basedir}/assets</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
